@@ -143,6 +143,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #14396: Handle the odd rare case of waitpid returning 0 when not
+  expected in subprocess.Popen.wait().
+
 - Issue #16411: Fix a bug where zlib.decompressobj().flush() might try to access
   previously-freed memory. Patch by Serhiy Storchaka.
 
